# cli-fae

./: .gitignore  Cargo.toml  cosy.json  fae.config.json  t.txt
src/: main.rs
